<resources>
    <string name="app_name">PD101.me</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="sending">Sending…</string>
    <string name="action_show_help">Help</string>
    <string name="notif_subtext">Tap to respond</string>
    <string name="toast_thanks">Thanks for updating your PD101.me</string>
    <string name="toast_error_offline">You need to be online.</string>
    <string name="toast_error_io">Oops! Please try again or contact support.</string>
    <string name="toast_error_no_sheet">No spreadsheet found, please contact support.</string>
    <string name="toast_new_backend_error">Problem with new backend, old backend worked fine.</string>
    <string name="toast_get_df_data_error">Problem loading data, please try again later.</string>
    <string name="toast_json_error">JSON Error, contact developer please.</string>
    <string name="toast_df_force_refresh_success">DF session refresh successful!</string>
    <string name="empty"></string>
    <string name="tutorial_meds">Click this button to report your medication doses.</string>
    <string name="tutorial_symp">Click this button to report any symptoms you have.</string>
    <string name="tutorial_log">Click this button to see a log of your data.</string>
    <string name="tutorial_info">You can enter medication doses, symptoms, and stress factors anytime,
        but the app will remind you to check in daily. Don\'t worry if you make a mistake, just try
        again and enter the correct information. The app only keeps the latest entry for each day so
        you have until midnight to update your daily tracking info</string>
    <string name="action_manage_meds">Manage Meds</string>
    <string name="action_logout">Logout</string>
    <string name="action_force_df_relogin">Force DF Re-login</string>
    <string name="toast_logout_success">You have been logged out.</string>
    <string name="title_activity_medication_confirm">Medication Doses</string>
    <string name="title_activity_medication_alarm">Today\'s Doses</string>
    <string name="report_meds_header">Fill in the number of pills you took for this time period.</string>
    <string name="reminder_meds_header">Fill in the number of pills you took for this time period.</string>
    <string name="dosage_NS">NS</string>
    <string name="dosage_0">0</string>
    <string name="dosage_1">1</string>
    <string name="dosage_2">2</string>
    <string name="dosage_3">3</string>
    <string name="dosage_4_plus">4+</string>
    <string name="send">Send</string>
    <string name="meds_notif_title">Did you take your medication?</string>
    <string name="meds_notif_morning_title">Did you take your morning medication?</string>
    <string name="meds_notif_afternoon_title">Did you take your afternoon_medication?</string>
    <string name="meds_notif_evening_title">Did you take your evening medication?</string>
    <string name="title_activity_symptoms">Rate Each Symptom</string>
    <string name="tab_title_symptoms">Symptoms</string>
    <string name="tab_title_stress_factors">Stress Factors</string>
    <string name="tutorial_painscale_1">Record the worst intensity you had for each symptom today.</string>
    <string name="tutorial_painscale_2">Individual scales can be seen by tapping the icon in the top
        right corner or the faces image.</string>
    <string name="send_symp_stress">Send</string>
    <string name="symp_stress_sent">Sent</string>
    <string name="symp_notif_title">How are you feeling?</string>
    <string name="stress_notif_title">How are you doing?</string>
    <string name="title_activity_log">Your Data</string>
    <string name="log_meds_label">Medication Doses</string>
    <string name="log_symp_label">Symptoms</string>
    <string name="log_env_label">Stress Factors</string>
    <string name="time_range">Show data from last:</string>
    <string name="no_data_for_timerange">No data for selected time range.</string>
    <string name="reload">Reload</string>
    <string name="toast_new_backend_log_error">Problem with new backend, pulling from old backend.</string>
    <string name="title_activity_add_meds">Select prescribed medications</string>
    <string name="toast_changes_saved">Changes saved.</string>
    <string name="toast_must_select_med">Please select medication.</string>
    <string name="title_activity_photo_slideshow">Photo SlideShow</string>
    <string name="no_camera_message">You do not have the camera support</string>
    <string name="dialog_ok_button_text">OK</string>
    <string name="fail_create_image_file">Failed to create image file. Please check file name and storage directory.</string>
    <string name="change_bucket_message">Change Family Sharing Bucket</string>
    <string name="bucket_name">Family Sharing Bucket Name</string>
    <string name="change_bucket_direction">Your current family sharing bucket is listed below.
        Input the new family sharing name if you want to change it</string>
    <string name="change">Change</string>
    <string name="dialog_change_city_title">Change City</string>
    <string name="dialog_change_city_button">Go</string>
    <string name="dialog_alert_title">Alert</string>
    <string name="open_weather_maps_app_id"></string>
    <string name="celsius_unit">℃</string>
    <string name="fahren_unit">℉</string>
    <string name="weather_sunny"></string>
    <string name="weather_clear_night"></string>
    <string name="weather_foggy"></string>
    <string name="weather_cloudy"></string>
    <string name="weather_rainy"></string>
    <string name="weather_snowy"></string>
    <string name="weather_thunder"></string>
    <string name="weather_drizzle"></string>
    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city_field_hint">City Here (example: New York)</string>
    <string name="country_field_hint">Country Here (example: US)</string>
    <string name="title_activity_unlock">Enter PIN</string>
    <string name="title_activity_create_pin">Create PIN</string>
    <string name="create_pin_instructions">Please create a 4 digit PIN. MS101.me will ask you for
        this PIN each time you open it to ensure your data is kept secure.</string>
    <string name="unlock_instructions">Please enter your 4 digit PIN</string>
    <string name="legal">DO NOT USE THIS APP FOR EMERGENCIES.
        \nLEAP-NEURO DISCLAIMS ALL LIABILITY FOR USE IN CONNECTION WITH EMERGENCIES.
        \nTHIS APP SHOULD NOT BE USED AS A SUBSTITUTE FOR DIRECT COMMUNICATION WITH HEALTHCARE PROFESSIONALS.
        CALL YOUR HEALTHCARE PROVIDER DIRECTLY TO REPORT HEALTH-RELATED QUESTIONS OR CONCERNS.</string>
    <string name="wrong_pin">The PIN you entered was incorrect.</string>
    <string name="pin_hint">XXXX</string>
    <string name="unlock">Unlock</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_login">Do you have @pd101.me login?</string>
    <string name="email_addr">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="df_login_prompt">Please Login</string>
    <string name="account_must_be">Must be YOUR_ID@pd101.me</string>
    <string name="toast_added_account">Will use account: %1$s</string>
    <string name="toast_no_credentials">Please visit http://pd101.me to get onboarded</string>
    <string name="toast_add_account">You need to add @%1$s account.</string>
    <string name="toast_login_cancelled">Login Cancelled</string>
    <string name="title_activity_record_audio">Record Audio</string>
    <string name="record_audio_prompt">Please describe any symptoms you\'re experiencing.
        Your audio note is limited to 20 seconds, so please be concise!</string>
    <string name="audio_not_present">No Audio Note</string>
    <string name="alert_unsaved_audio_title">Unsaved Audio Note</string>
    <string name="alert_unsaved_audio_message">You have an unsaved audio note. Would you like to save
        it or discard it?</string>
    <string name="start_record">Start Recording</string>
    <string name="stop_record">Stop Recording</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="delete">Delete</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="title_activity_setup_md_widget">Widget Setup</string>
    <string name="md_not_set_up">Touch pill for setup</string>
    <string name="md_choose_med">Confirm</string>
    <string name="md_choose_med_prompt">After setting up this widget, you will get ongoing notifications at certain times of day to help you track your dosing schedule.
    \nPlease choose what medication you would like to have this widget track from the list below.</string>
    <string name="md_not_needed_prompt">You\'re not tracking a medication that can use this widget, feel free to delete it from your home screen.</string>
    <string name="md_setup_prompt">You\'re tracking %s, please add our one click dose widget to your home screen.</string>
    <string name="md_miss_prompt">Did you take your %s dose?</string>
    <string name="tec_notif_title">Tecfidera Dose</string>
    <string name="tec_notif_text_1">Click the pill widget to report your first Tecfidera dose.</string>
    <string name="tec_notif_text_2">Click the pill widget to report your second Tecfidera dose.</string>
    <string name="tec_dose_reported_title">Well Done</string>
    <string name="tec_miss_dose_title">Tecfidera</string>
    <string name="tec_dose_reported_text">Your Tecfidera doses have been updated on your data dashboard.</string>
    <string name="title_activity_test">Test Area</string>
    <string name="prompt_1">Simulates playback functionality using a local audio file</string>
    <string name="prompt_2">File name: Test file.m4a</string>
    <string name="test_play">Play file</string>
    <string name="test_choose">Choose Recorded File</string>
    <string name="test_clear">Clear Recorded Files</string>
    <string name="test_record_audio">Test Audio Recording</string>
    <string name="toast_no_choice">No recorded audio files</string>
    <string name="help_meds_title">Dosage Reporting</string>
    <string name="help_meds_content">To report the amount of medication you\'ve taken during the current time interval,
        simply fill in the bubble of how many pills of each medication you\'ve taken.
        \n
        \nFill in 0 if you have\'nt taken any pills for the current time interval.</string>
    <string name="help_medication_title">Dosage Reminder</string>
    <string name="help_medication_content">To report the amount of medication you\'ve taken during the current time interval,
        simply fill in the bubble of how many pills of each medication you\'ve taken.
        \n
        \nFill in 0 if you have\'nt taken any pills for the current time interval.</string>
    <string name="help_morning_medication_title">Morning Dosage Reminder</string>
    <string name="help_morning_medication_content">To report the amount of medication you\'ve taken in the morning,
        simply fill in the bubble of how many pills of each medication you\'ve taken.
        \n
        \nFill in 0 if you have\'nt taken any pills in the morning.</string>
    <string name="help_afternoon_medication_title">Afternoon Dosage Reminder</string>
    <string name="help_afternoon_medication_content">To report the amount of medication you\'ve taken in the afternoon,
        simply fill in the bubble of how many pills of each medication you\'ve taken.
        \n
        \nFill in 0 if you have\'nt taken any pills in the afternoon.</string>
    <string name="help_evening_medication_title">Evening Dosage Reminder</string>
</resources>