<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp"
                tools:context=".RecordAudioActivity">

    <TextView android:id="@+id/record_audio_prompt"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="8dp"
              android:text="@string/record_audio_prompt"
              style="@android:style/TextAppearance.Medium" />

    <TextView android:id="@+id/audio_status"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@+id/record_audio_prompt"
              android:text="@string/audio_not_present" />

    <ProgressBar android:id="@+id/audio_position"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/audio_status"
                 style="?android:attr/progressBarStyleHorizontal" />

    <Button android:id="@+id/record_start_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/audio_position"
            android:layout_centerHorizontal="true"
            android:text="@string/start_record" />

    <LinearLayout android:id="@+id/audio_controls_cont"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/audio_position"
                  android:gravity="center_horizontal"
                  android:visibility="gone" >

        <Button android:id="@+id/audio_play_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play" />

        <Button android:id="@+id/audio_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete" />

        <Button android:id="@+id/audio_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save" />
    </LinearLayout>
</RelativeLayout>
