<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".TestActivity">

    <TextView android:id="@+id/test_desc"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentTop="true"
              android:layout_alignParentRight="true"
              android:layout_alignParentLeft="true"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:text="@string/prompt_1"/>

    <TextView android:id="@+id/test_file_name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@id/test_desc"
              android:text="@string/prompt_2"/>

    <ProgressBar android:id="@+id/test_progress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentRight="true"
                 android:layout_below="@+id/test_file_name"
                 android:indeterminate="false"
                 style="?android:attr/progressBarStyleHorizontal" />

    <Button android:id="@+id/test_play_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/test_progress"
            android:text="@string/test_play" />

    <Button android:id="@+id/test_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_choose"
            android:layout_below="@+id/test_play_stop" />

    <Button android:id="@+id/test_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_clear"
            android:layout_below="@+id/test_choose" />

    <Button android:id="@+id/test_record_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/test_clear"
            android:text="@string/test_record_audio" />



</RelativeLayout>
