<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView android:id="@+id/df_login_error_msg"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/empty"
              android:layout_marginLeft="4dp"
              android:layout_marginRight="4dp"
              android:textColor="@android:color/holo_red_dark"
              android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText android:id="@+id/email_addr"
              android:inputType="textEmailAddress"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="4dp"
              android:hint="@string/email_addr" />

    <EditText android:id="@+id/password"
              android:inputType="textPassword"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="4dp"
              android:fontFamily="sans-serif"
              android:hint="@string/password"/>
</LinearLayout>