<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/action_manage_meds"
          android:orderInCategory="100"
          android:showAsAction="never"
          android:title="@string/action_manage_meds"/>
    <item android:id="@+id/action_force_df_relogin"
          android:orderInCategory="100"
          android:showAsAction="never"
          android:visible="true"
          android:title="@string/action_force_df_relogin" />
    <item android:id="@+id/action_logout"
          android:orderInCategory="100"
          android:showAsAction="never"
          android:title="@string/action_logout"/>
    <item android:id="@+id/action_test_notif"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:visible="true"
        android:title="Send Notif" />

    <group android:id="@+id/dev_actions"
           android:orderInCategory="100"
           android:visible="true" >
        <item android:id="@+id/action_test_screen"
              android:orderInCategory="100"
              android:showAsAction="never"
              android:visible="true"
              android:title="Audio Test"/>

        <!--<item android:id="@+id/action_test_notif"
              android:orderInCategory="100"
              android:showAsAction="never"
              android:visible="true"
              android:title="Send Notif" />-->

        <item android:id="@+id/action_test_jobs"
              android:orderInCategory="100"
              android:showAsAction="never"
              android:visible="true"
              android:title="Test Jobs" />
    </group>
</menu>