<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".LogActivity" >

    <TextView android:id="@+id/log_section_label"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentTop="true"
              android:text="@string/time_range"
              android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner android:id="@+id/log_time_range"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/log_section_label"
             android:layout_toRightOf="@+id/log_section_label" />

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/log_time_range" >

        <FrameLayout android:id="@+id/log_list_container"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">

            <TextView android:id="@+id/empty_list"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:text="@string/no_data_for_timerange"
                      android:textAppearance="?android:attr/textAppearanceMedium"
                      android:visibility="invisible" />

            <ListView android:id="@+id/log_list"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent" />
        </FrameLayout>

        <ProgressBar android:id="@+id/log_loading"
                     style="?android:attr/progressBarStyleLarge"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:visibility="gone" />

        <Button android:id="@+id/log_reload"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/reload"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="gone" />
    </FrameLayout>
</RelativeLayout>